manifests/requestauthentication.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: "jwt-example"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: nginx
  jwtRules:
    - issuer: "ISSUER"
      jwks: |
        <paste print.py istio jwks output here>
